优化登录页暗色模式效果

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #007AFF;
+$secondary : #0067ce;
+$accent    : #004387;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
